hard-gists/3473799/run.log
=== Docker Run Log for 3473799 ===
Started at: Mi 29. Okt 13:53:33 CET 2025

[2025-10-29 13:53:34] START: Running container for 3473799
[2025-10-29 13:53:34] SUCCESS: Container 99e60041bf9bc5c7f9bb29db84f629af79bc87371df4c5b18ad053f934f82b62 started for 3473799
=== Container logs for 3473799 ===
  File "/snippet.py", line 76
    print n, time.strftime ('%Y/%m/%d %H:%M:%S'), '**rejecting**', fmtdate (date)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3473799 ===
[2025-10-29 13:53:36] INFO: Container 99e60041bf9bc5c7f9bb29db84f629af79bc87371df4c5b18ad053f934f82b62 has stopped
